# group-project-girsanov-s-gang

./: CMakeLists.txt  README.md  UMLDiagram.plantuml  delete_me.txt  originalCmake.txt  testing_barr.py
src/: AnalysisWriter.cpp  AnalysisWriter.hpp  BarrierOption.cpp  BarrierOption.hpp  Option.cpp  Option.hpp  OptionPricerBarrier.cpp  OptionPricerBarrier.hpp  OptionPricerBarrierAntithetic.cpp  OptionPricerBarrierAntithetic.hpp  OptionPricerBarrierIS.cpp  OptionPricerBarrierIS.hpp  OptionPricerBarrierStratified.cpp  OptionPricerBarrierStratified.hpp  PricingEngine.cpp  PricingEngine.hpp  PricingEngineBarrier.hpp  TestBarrierPricers.cpp  capture_output.cpp  capture_output.hpp  convergence_analysis.csv  error_tolerance.csv  generate_convergence_output.cpp  main.cpp  method_efficiency.csv  option_pricing_convergence.cpp  output.csv  spot_price_sensitivity.csv  testBarrier  volatility_sensitivity.csv
tests/: CMakeLists.txt  antithetic_pricing.cpp  barrier_pricing_tests.cpp  control_variates_pricing.cpp  importance_sampling_pricing.cpp  naive_pricing.cpp  stratified_sampling_pricing.cpp  test_asian_pricing_engine.cpp  test_barrier_option.cpp  test_main.cpp  test_option.cpp
